Added pages, base styles, variables, and mixins

--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -401,3 +401,10 @@
     width: auto;
     z-index: 100000; /* Above WP toolbar. */
   }
+
+  ul {
+    list-style: none;
+    margin: 0;
+  }
+
+  
