created theme button and also 404 page not found

--- a/src/styles/_nav-main.scss
+++ b/src/styles/_nav-main.scss
@@ -22,7 +22,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: $backgroundsecondary;
+    // background-color: $backgroundsecondary;
 }
 
 .nav-menu {
