Create hero image banner with additional scss file

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -19,6 +19,7 @@
 @import './body';
 @import './wrapper';
 @import './header';
+@import './hero-img';
 @import './nav-sort';
 @import './nav-main';
 @import './movies';
