Edited movie cards, added grid, and gave border radius to cards

--- a/src/styles/_movie-card.scss
+++ b/src/styles/_movie-card.scss
@@ -1,3 +1,21 @@
+// For grid setup --
+.movies-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr; 
+  grid-gap: 2rem;
+  position: absolute;
+  top: 37.5rem;
+  left: 0;
+  right: 0;
+}
+
+.movie-poster {
+
+  img {
+    border-radius: 15px;
+  }
+}
+
 .card-container {
   position: relative;
 }
@@ -8,6 +26,11 @@
   width: 90%;
   max-width: 400px;
   margin: auto;
+  border-radius: 15px;
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+  // div {
+  //   box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+  // }
 }
 
 .movie-info {
@@ -19,6 +42,8 @@
   background-color: rgba($backgroundsecondary, 0.9);
   padding: 1.5rem;
   height: 100%;
+  border-radius: 15px;
+  box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
 }
 
 .movie-card:hover {
