--- a/src/styles/_hero-img.scss
+++ b/src/styles/_hero-img.scss
@@ -2,7 +2,7 @@
 
     .slick-slider { 
         box-sizing: border-box;
-        width: 95vw;
+        width: 100%;
         margin: 0 auto;
         position: absolute;
         left: 0;
@@ -16,7 +16,7 @@
             background-color: black;
             width: 100%;
             height: 99%;
-            z-index: 100;
+            z-index: 10;
             opacity: 0.7;
         }
 
