favourites buttons and page

--- a/src/styles/_button.scss
+++ b/src/styles/_button.scss
@@ -41,3 +41,12 @@
 //     border-radius: 4px;
 //     font-size: 1.4rem;
 // }
+
+.favs-btn  {
+    background: transparent;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    right: 15;
+  }
+  
