Updated navigation, menu, and created About Page

--- a/src/styles/page-not-found.scss
+++ b/src/styles/page-not-found.scss
@@ -1,6 +1,6 @@
 .pageNotFound {
-    margin: 50px 75px;
-    padding: 100px;
+    margin: 25px 75px;
+    padding: 50px;
     font-weight: 100;
     font-size: 1rem;
     text-align: center;
@@ -23,4 +23,9 @@
         background-color: #E03D15;
         color: #fcfcfc;
     }
+}
+
+.lost {
+    width: 1080px;
+    height: auto;
 }
