--- a/src/styles/_hero-img.scss
+++ b/src/styles/_hero-img.scss
@@ -13,7 +13,7 @@
             position: absolute;
             top: 0;
             left: 0;
-            background-color: black;
+            background-color: rgba(0, 0, 0, 0.331);
             width: 100%;
             height: 99%;
             z-index: 10;
@@ -23,7 +23,7 @@
         img {
             display: block;
             width: 100%;
-            height: 40vh;
+            height: 50vh;
             object-fit: cover;
             object-position: top center;
             margin: 0 auto;
