--- a/src/styles/_nav-main.scss
+++ b/src/styles/_nav-main.scss
@@ -22,6 +22,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    height: 100px;
     // background-color: $backgroundsecondary;
 }
 
@@ -49,6 +50,7 @@ body {
     &:hover {
         // background-color: #304972c8;
         color: $accentcolor;
+        font-weight: 400;
         letter-spacing: 2px;
         box-shadow: 0px 10px 12px -6px $accentcolor;
         transform: translateY(-10px);
@@ -79,25 +81,26 @@ body {
         width: 100%;
         height: 50vh;
         position: absolute;
-        top: 145px;
+        top: 100px;
         left: -100%;
-        opacity: 1;
-        transition: 1s ease-in-out;
+        opacity: .95;
+        transition: 1s ease-in;
+        z-index: 1000;
     }
     .nav-menu.active {
         width: 100vw;
         height: 100vh;
-        background: #393967;
+        background: #0b0b0b;
         left: 0;
-        opacity: 1;
-        transition: 0.5s ease-in-out;
-
+        opacity: .95;
+        transition: 0.5s ease-in;
+        z-index: 1000;
     }
 
     .nav-links {
         font-size: 1.5rem;
         text-align: center;
-        padding: 1rem;
+        padding: 1rem 125px;
         margin-top: 50px;
         width: 100%;
         display: table;
@@ -121,7 +124,7 @@ body {
     .menu-icon {
         display: block;
         position: absolute;
-        top: 38px;
+        top: 15px;
         right: 0;
         transform: translate(-100%, 70%);
         font-size: 1.8rem;
