updated with new search page

--- a/src/styles/_body.scss
+++ b/src/styles/_body.scss
@@ -1,8 +1,7 @@
 // Body Styles
 
 body {
-    background-color: $backgroundprimary;
+    background-color: #293241;
     color: $primarytxtcolor;
     padding: $bodyPadding;
-
 }
