added styles to single movie page. Just need to finish 1280px media query

--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -11,3 +11,9 @@
     text-align: center;
     justify-content: center;
 }
+
+@mixin mq($w) {
+    @media (min-width: $w){
+        @content;
+    }
+}
