--- a/src/styles/_movie-card.scss
+++ b/src/styles/_movie-card.scss
@@ -6,6 +6,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
+  justify-content: center;
   align-items: stretch;
 }
 
@@ -15,7 +16,7 @@
   color: $accentcolor;
   font-size: 30px;
   position: absolute;
-  bottom: 150%;
+  top: -50%;
   left: 0.1rem;
 }
 
@@ -25,16 +26,16 @@
   color: $accentcolor;
   font-size: 30px;
   position: absolute;
-  bottom: 150%;
+  top: -50%;
   right: 0.1rem;
 }
 
 .sliders-container {
   @include flex-column;
   position: absolute;
-  top: 44rem;
-  left: 2rem;
-  right: 2rem;
+  top: 78vh;
+  left: 3rem;
+  right: 3rem;
 
   a {
     color: $primarytxtcolor;
@@ -48,6 +49,10 @@
   a:hover {
     color: $accentcolor;
   }
+
+  h2 {
+    padding-top: 2.5rem;
+  }
 }
 
 .category-container {
@@ -59,22 +64,39 @@
 
 .movies-container {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr;
   grid-gap: 2rem;
+
+  @include mq(700px) {
+    grid-template-columns: 1fr 1fr;
+  }
+
+  @include mq(1015px) {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+
+  @include mq(1500px) {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
+
+  @include mq(1920px) {
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  }
 }
 
 .movie-poster {
   img {
-    border-radius: 15px;
+    border-radius: 10px;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
-
-  height: 100%;
   width: 100%;
+  height: 100%;
 }
 
 .card-container {
-  position: relative;
-  padding: 0 0 4rem 0;
+  padding-bottom: 1rem;
 }
 
 .movie-card {
@@ -82,9 +104,10 @@
   position: relative;
   width: 90%;
   max-width: 400px;
+  height: 98.5%;
   margin: auto;
-  border-radius: 15px;
-  box-shadow: rgba(0, 0, 0, 0.5) 6px 6px 12px;
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.5) 6px 10px 12px;
 }
 
 .movie-info {
@@ -93,10 +116,20 @@
   right: 0;
   left: 0;
   margin: auto;
-  background-color: rgba($backgroundsecondary, 0.9);
+  background-color: rgba($backgroundsecondary, 0.97);
   padding: 1.5rem;
-  height: 100%;
-  border-radius: 15px;
+  height: 101.5%;
+  border-radius: 10px;
+
+  @media (max-width: 400px) {
+    padding: 0.75rem;
+  }
+}
+
+.card-header {
+  @include flex-row;
+  justify-content: space-around;
+  align-items: center;
 }
 
 .movie-card:hover {
@@ -105,22 +138,47 @@
     justify-content: flex-start;
 
     h3 {
-      font-size: 1.6rem;
+      font-size: 1.4rem;
+      font-weight: 300;
       text-transform: uppercase;
+
+      @media (max-width: 400px) {
+        font-size: 1rem;
+      }
+    }
+
+    h4 {
+      font-weight: 200;
+      margin: 0 0 0.5rem 0;
     }
 
     p {
-      font-size: 1.2rem;
+      font-size: 1.3rem;
       text-align: left;
+      margin: 0;
+      overflow: hidden;
+
+      @media (max-width: 400px) {
+        font-size: 1rem;
+      }
     }
 
     span {
-      font-weight: 600;
-      font-size: 1.5rem;
+      font-weight: 400;
+      font-size: 2rem;
+
+      @media (max-width: 400px) {
+        font-size: 1rem;
+      }
     }
 
     .thumbs {
       width: 3rem;
+      padding-right: 0.5rem;
+
+      @media (max-width: 400px) {
+        font-size: 1rem;
+      }
     }
 
     .rating {
@@ -130,13 +188,20 @@
     }
 
     .btn-more-info {
+      position: absolute;
+      bottom: 0.75rem;
       background-color: $accentcolor;
-      width: 50%;
+      max-width: 50%;
       align-self: center;
-      padding: 1rem 2rem;
-      border-radius: 2rem;
+      padding: 0.5rem 1rem;
+      border-radius: 1rem;
       text-decoration: none;
       color: $primarytxtcolor;
+
+      @media (max-width: 400px) {
+        padding: 0.25rem 0.5rem;
+        border-radius: 0.5rem;
+      }
     }
   }
 }
