--- a/src/styles/_nav-main.scss
+++ b/src/styles/_nav-main.scss
@@ -3,6 +3,17 @@ body {
     padding: 0px 0;
 }
 
+// .logo-titles {
+//     display: flex;
+//     justify-content: start;
+//     flex-direction: column;
+//     margin: 0;
+// }
+
+// #subtitle {
+//     margin: 0 auto;
+// }
+
 .logo {
     display: flex;
     align-items: center;
@@ -18,10 +29,20 @@ body {
 }
 
 .NavbarItems {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    z-index: 10000;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 100px;
+    height: 120px;
+    width: 100vw;
+    transition: .5s ease-in-out;
+    &:hover {
+        background-color: #293241a7;
+        border-radius: 0px 0px 10px 0px;
+    }
     // background-color: $backgroundsecondary;
 }
 
@@ -41,7 +62,7 @@ body {
 .nav-links {
     text-transform: uppercase;
     font-size: 1.75rem;
-    font-weight: 200;
+    font-weight: 400;
     color: $primarytxtcolor;
     padding: 5px 15px;
     text-decoration: none;
@@ -123,7 +144,7 @@ body {
     .menu-icon {
         display: block;
         position: absolute;
-        top: 15px;
+        top: 25px;
         right: 0;
         transform: translate(-100%, 70%);
         font-size: 1.8rem;
