--- a/src/styles/_nav-main.scss
+++ b/src/styles/_nav-main.scss
@@ -43,7 +43,7 @@ body {
     text-transform: uppercase;
     font-size: 1.75rem;
     font-weight: 200;
-    color: $primarytxtcolor;
+    color: var(--navtext);
     padding: 5px 15px;
     text-decoration: none;
     transition: .5s ease-in-out;
