added title and more info button to hero image and styled, fixed padding of movie poster on single page

--- a/src/styles/_movie-card.scss
+++ b/src/styles/_movie-card.scss
@@ -1,14 +1,15 @@
 // For grid setup --
-.slick-slide {
-  height: auto;
-}
-.slick-track {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  justify-content: center;
-  align-items: stretch;
-}
+// .slick-slide {
+//   height: auto;
+// }
+
+// .slick-track {
+//   display: flex;
+//   flex-direction: row;
+//   flex-wrap: nowrap;
+//   justify-content: center;
+//   align-items: stretch;
+// }
 
 .slick-prev:before {
   content: "\1438
