--- a/src/styles/_single-movie.scss
+++ b/src/styles/_single-movie.scss
@@ -14,13 +14,17 @@
 
                 @include mq($tabletBP){
                     width: 60%;
+                    margin-bottom: 2rem;
+                    margin-top: 4rem;
                 }
+
 
                 @include mq($desktopBP){
                     margin: 0;
                     margin-left: 5%;
                     width: 37%;
                     max-width: 28rem;
+                    margin-top: 4rem;
                 }
 
                 @include mq($desktopWideBP){
@@ -52,8 +56,9 @@
 
                 .movieTitle {
                     text-align: center;
-                    margin: 1rem 0 auto;
+                    margin: 1rem auto;
                     font-size: 1.8em;
+                    max-width: 90vw;
 
                     @include mq($tabletBP){
                         font-size: 2.7em;
