fixed dep. array for each slider
fixed dep. array for each slider, updated "upcoming" category page and slider to pull future movies.

--- a/src/styles/_movie-card.scss
+++ b/src/styles/_movie-card.scss
@@ -1,14 +1,14 @@
 // For grid setup --
-.slick-slide {
-  height: auto;
-}
-.slick-track {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  justify-content: center;
-  align-items: stretch;
-}
+// .slick-slide {
+//   height: auto;
+// }
+// .slick-track {
+//   display: flex;
+//   flex-direction: row;
+//   flex-wrap: nowrap;
+//   justify-content: center;
+//   align-items: stretch;
+// }
 
 .slick-prev:before {
   content: "\1438
@@ -34,7 +34,7 @@
   @include flex-column;
   position: absolute;
 
-  top: 78vh;
+  top: 88vh;
   left: 3rem;
   right: 3rem;
 
@@ -54,13 +54,17 @@
   h2 {
     padding-top: 2.5rem;
   }
-
 }
 
 .category-container {
   h2 {
     text-align: center;
     padding-bottom: 2rem;
+  }
+
+  @include mq($tabletBP) {
+    position: absolute;
+    top: 8rem;
   }
 }
 
@@ -110,6 +114,8 @@
   margin: auto;
   border-radius: 10px;
   box-shadow: rgba(0, 0, 0, 0.5) 6px 10px 12px;
+
+  transition: background 0.5s;
 }
 
 .movie-info {
@@ -134,10 +140,12 @@
   align-items: center;
 }
 
-.movie-card:hover {
+.movie-card:hover,
+.movie-card:active,
+.movie-card:focus {
   .movie-info {
     @include flex-column;
-    
+
     justify-content: flex-start;
 
     h3 {
