--- a/src/styles/_nav-main.scss
+++ b/src/styles/_nav-main.scss
@@ -3,17 +3,6 @@ body {
     padding: 0px 0;
 }
 
-// .logo-titles {
-//     display: flex;
-//     justify-content: start;
-//     flex-direction: column;
-//     margin: 0;
-// }
-
-// #subtitle {
-//     margin: 0 auto;
-// }
-
 .logo {
     display: flex;
     align-items: center;
@@ -36,39 +25,56 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 120px;
-    width: 100vw;
-    transition: .5s ease-in-out;
+    height: 100px;
+    width: 100%;
+    transition: .3s ease-in-out;
     &:hover {
-        background-color: #293241a7;
-        border-radius: 0px 0px 10px 0px;
+        background-color: #162030f1;
     }
     // background-color: $backgroundsecondary;
 }
 
 .nav-menu {
-    padding: 0px 25px 0px 0px;
+    // display: flex;
+    // flex-direction: row;
+    // justify-content: space-evenly;
+    // padding: 0;
     margin: 0; 
     display: grid;
-    grid-template-columns: repeat(5, auto);
-    grid-gap: 10px; 
+    grid-template-columns: repeat(4, auto); 
+    grid-gap: 25px;
     list-style: none;
     text-align: center;
-    width: 70vw;
+    width: 50vw;
     justify-content: end;
     align-items: center;
 }
 
+.nav-menu.active {
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+@media (min-width: 765px){
+    .nav-menu.active {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: auto;
+        justify-content: center;
+        align-items: center;
+    }
+}
+
 .nav-links {
     text-transform: uppercase;
-    font-size: 1.75rem;
-
-    font-weight: 200;
+    font-size: 1.5rem;
+    font-weight: 400;
     color: var(--navtext);
-
-    padding: 5px 15px;
+    padding: 5px 25px;
     text-decoration: none;
-    transition: .5s ease-in-out;
+    transition: .1s ease-in-out;
     &:hover {
         // background-color: #304972c8;
         color: $accentcolor;
@@ -98,35 +104,36 @@ body {
     }
     .nav-menu {
         display: flex;
-        padding: 0;
         flex-direction: column;
-        width: 100%;
-        height: 50vh;
+        justify-content: space-evenly;
+        width: 100vw;
+        height: 100vh;
         position: absolute;
         top: 100px;
         left: -100%;
-        opacity: .95;
-        transition: 1s ease-in;
-        z-index: 1000;
+        opacity: 1;
+        transition: .05s ease-in-out;
+        z-index: 100;
     }
     .nav-menu.active {
-        width: 100vw;
+        display: flex;
+        flex-direction: column;
+        width: 100%;
         height: 100vh;
-        background: #0b0b0b;
+        background: #293241;
         left: 0;
-        opacity: .98;
-        transition: 0.5s ease-in;
+        opacity: 1;
         z-index: 1000;
     }
 
     .nav-links {
         font-size: 1.5rem;
         text-align: center;
-        padding: 1rem 125px;
-        margin-top: 50px;
+        padding: 1rem 100px;
+        margin-top: 0px;
         width: 100%;
         display: table;
-        transition: 0.3s ease-in-out;
+        transition: 0.05s ease-in-out;
     }
     .nav-links:hover {
         border-radius: 0px 0px 5px 5px;
@@ -146,7 +153,7 @@ body {
     .menu-icon {
         display: block;
         position: absolute;
-        top: 25px;
+        top: 15px;
         right: 0;
         transform: translate(-100%, 70%);
         font-size: 1.8rem;
