--- a/src/styles/_searchMovies.scss
+++ b/src/styles/_searchMovies.scss
@@ -39,10 +39,10 @@
 .search-box-container {
     padding: 10px 25px 30px 25px;
     margin: 10px 50px;
-    background-color: #b5d2e322;
+    background-color: #14384aa3;
     border-radius: 5px;
     // border-color: rgba(255, 68, 0, 0.584);
-    border: solid 1px rgba(255, 255, 255, 0.379);
+    border: solid 1px rgba(255, 255, 255, 0.146);
 }
 
 @media (min-width: 765px) {
@@ -161,7 +161,7 @@
     height: auto;
     padding: 1rem 1rem;
     border-radius: 5px;
-    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.488);
+    // box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.488);
     background-color: #3d5a8000;
     transition: .2s ease-in-out;
     &:hover {
