--- a/src/styles/_movie-card.scss
+++ b/src/styles/_movie-card.scss
@@ -31,6 +31,7 @@
 }
 
 .sliders-container {
+  z-index: 10000;
   @include flex-column;
   position: absolute;
 
@@ -69,25 +70,9 @@
 }
 
 .movies-container {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-gap: 2rem;
-
-  @include mq(700px) {
-    grid-template-columns: 1fr 1fr;
-  }
-
-  @include mq(1015px) {
-    grid-template-columns: 1fr 1fr 1fr;
-  }
-
-  @include mq(1500px) {
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-  }
-
-  @include mq(1920px) {
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-  }
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .movie-poster {
@@ -96,13 +81,14 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+    transition: all 0.3s linear;
   }
   width: 100%;
   height: 100%;
 }
 
 .card-container {
-  padding-bottom: 1rem;
+  padding-bottom: 2rem;
 }
 
 .movie-card {
@@ -114,8 +100,7 @@
   margin: auto;
   border-radius: 10px;
   box-shadow: rgba(0, 0, 0, 0.5) 6px 10px 12px;
-
-  transition: background 0.5s;
+  overflow: hidden;
 }
 
 .movie-info {
@@ -124,14 +109,19 @@
   right: 0;
   left: 0;
   margin: auto;
-  background-color: rgba($backgroundsecondary, 0.97);
+  background-color: rgba($backgroundsecondary, 0.9);
   padding: 1.5rem;
   height: 101.5%;
   border-radius: 10px;
+  transition: all 0.2s ease-in-out;
 
   @media (max-width: 400px) {
     padding: 0.75rem;
   }
+}
+
+.movie-card:hover img {
+  transform: scale(1.2);
 }
 
 .card-header {
@@ -215,4 +205,8 @@
       }
     }
   }
+}
+
+.movie-card a.btn-more-info:hover {
+  box-shadow: 0 0 5px #fff;
 }
