--- a/src/styles/_single-movie.scss
+++ b/src/styles/_single-movie.scss
@@ -22,13 +22,13 @@
                 @include mq($desktopBP){
                     margin: 0;
                     margin-left: 5%;
-                    width: 37%;
+                    width: 40%;
                     max-width: 28rem;
                     margin-top: 4rem;
                 }
 
                 @include mq($desktopWideBP){
-                    max-width: 33rem;
+                    max-width: 32rem;
                     margin-right: 2rem;
                 }
             }
@@ -41,17 +41,22 @@
 
                 @include mq($desktopBP){
                     position: absolute;
-                    top: 12%;
+                    top: 15%;
                     max-width: 50vw;
                     right: 30px;
-                    overflow: hidden;
+                    word-wrap: break-word;
+                    // overflow: hidden;
                 }
 
                 @include mq($desktopWideBP){
                     max-width: 55vw;
                     top: 15%;
-                    right: 7%;
+                    right: 6%;
                     padding-left: 7rem;
+                }
+
+                @include mq(1600px){
+                    right: 9%;
                 }
 
                 .movieTitle {
@@ -74,52 +79,97 @@
                     }
                 }
 
-
-                .rating {
-                    display: flex;
-                    justify-content: center;
-                    margin: 1rem 0;
+                .underTitle{
+                    display: block;
 
                     @include mq($desktopBP){
-                        justify-content: left;       
+                        display: flex;
                     }
 
-                    img {
-                        width: 50px;
-
-                        @include mq($tabletBP){
-                            width: 70px;
-                        }
-
+                    .rating {
+                        display: flex;
+                        justify-content: center;
+                        margin: 1rem 0;
+    
                         @include mq($desktopBP){
+                            justify-content: left;       
+                        }
+    
+                        img {
                             width: 50px;
+    
+                            @include mq($tabletBP){
+                                width: 70px;
+                            }
+    
+                            // @include mq($desktopBP){
+                            //     width: 70px;
+                            // }
+    
+                            // @include mq($desktopWideBP){
+                            //     width: 70px;
+                                
+                            // }
+                        }
+    
+                        .ratingPercent{
+                            margin-left: 10px;
+                            font-size: 1.7em;
+                        
+                            @include mq($tabletBP){
+                                font-size: 2.5em;
+                            }
+                            
+                            @include mq($desktopWideBP){
+                                font-size: 2.5em;
+                                margin-left: 2rem;
+                                margin-bottom: 2rem;
+                            }
+                        }
+                    }
+
+                    .trailer {
+                        @include mq($desktopBP){
+                            padding-top: 8px;
                         }
 
-                        @include mq($desktopWideBP){
-                            width: 70px;
+                        p {
+                            white-space: nowrap;
+                            font-size: 1em;
+                            text-align: center;
+                            margin-bottom: 3rem;
+
+                            @include mq($tabletBP){
+                                font-size: 1.8em;
+                                margin-top: 3rem;
+                                margin-bottom: 4rem;
+                            }
+
+                            @include mq($desktopBP){
+                                font-size: 1.3em;
+                                margin-left: 5rem;
+                                margin-bottom: 3rem;
+                                
+                            }
+
+                            @include mq($desktopWideBP){
+                                font-size: 1.8em;
+                                margin-left: 5rem;
+                            }
+                        }
+
+                        a {
+                            text-decoration: none;
+                            color: $primarytxtcolor;
+                            border: 3px solid $accentcolor;
+                            border-radius: 15px;
+                            padding: 0.3rem 0.7rem;
+                            background-color: $accentcolor;
                             
                         }
                     }
-
-                    .ratingPercent{
-                        margin-left: 10px;
-                        font-size: 1.7em;
-                    
-                        @include mq($tabletBP){
-                            font-size: 2.5em;
-                        }
-
-                        @include mq($desktopBP){
-                            font-size: 1.7em;   
-                        }
-                        
-                        @include mq($desktopWideBP){
-                            font-size: 2.5em;
-                            margin-left: 2rem;
-                            margin-bottom: 2rem;
-                        }
-                    }
                 }
+                
 
                 h3 {
                     font-size: 1.4em;
@@ -158,7 +208,7 @@
                     }
 
                     @include mq($desktopBP){
-                        width: 50vw;
+                        max-width: 50vw;
                         font-size: 1.1em;
                     }
 
@@ -188,6 +238,7 @@
                     }
                     
                     .releaseDate {
+                        white-space: nowrap;
 
                         @include mq($desktopBP){
                             margin-right: 5rem;    
@@ -233,7 +284,7 @@
                     }
         
                     .runtime {
-        
+
                         .runtimeTitle {
                             font-size: 1.4em;
                             text-align: center;
