--- a/src/styles/_single-movie.scss
+++ b/src/styles/_single-movie.scss
@@ -75,7 +75,7 @@
 
                     @include mq($desktopWideBP){
                         font-size: 3rem;
-                        margin-bottom: 2rem;
+                        margin-bottom: 1rem;
                     }
                 }
 
@@ -101,29 +101,26 @@
                             @include mq($tabletBP){
                                 width: 70px;
                             }
-    
-                            // @include mq($desktopBP){
-                            //     width: 70px;
-                            // }
-    
-                            // @include mq($desktopWideBP){
-                            //     width: 70px;
-                                
-                            // }
                         }
     
                         .ratingPercent{
                             margin-left: 10px;
                             font-size: 1.7em;
+                            padding-top: 2px;
                         
                             @include mq($tabletBP){
                                 font-size: 2.5em;
                             }
+
+                            @include mq($desktopBP){
+                                padding-top: 5px;
+                            }
                             
                             @include mq($desktopWideBP){
                                 font-size: 2.5em;
-                                margin-left: 2rem;
-                                margin-bottom: 2rem;
+                                padding-top: 9px;
+                                margin-left: 1rem;
+                                margin-bottom: 1rem;
                             }
                         }
                     }
@@ -131,13 +128,21 @@
                     .trailer {
                         @include mq($desktopBP){
                             padding-top: 8px;
+                            
                         }
 
-                        p {
+                        button.modalBtn {
+                            display: block;
                             white-space: nowrap;
                             font-size: 1em;
                             text-align: center;
+                            margin: 0 auto;
                             margin-bottom: 3rem;
+                            color: $primarytxtcolor;
+                            border: 3px solid $accentcolor;
+                            border-radius: 15px;
+                            padding: 0.3rem 0.7rem;
+                            background-color: $accentcolor;
 
                             @include mq($tabletBP){
                                 font-size: 1.8em;
@@ -147,26 +152,25 @@
 
                             @include mq($desktopBP){
                                 font-size: 1.3em;
-                                margin-left: 5rem;
+                                margin-left: 3.5rem;
                                 margin-bottom: 3rem;
+
+                                transition: transform 0.3s ease-in;
+
+                                &:hover {
+                                    transform: scale(1.08, 1.08);
+                                    cursor: pointer;
+                                }
                                 
                             }
 
                             @include mq($desktopWideBP){
                                 font-size: 1.8em;
-                                margin-left: 5rem;
+                                margin-left: 4rem;
                             }
                         }
 
-                        a {
-                            text-decoration: none;
-                            color: $primarytxtcolor;
-                            border: 3px solid $accentcolor;
-                            border-radius: 15px;
-                            padding: 0.3rem 0.7rem;
-                            background-color: $accentcolor;
-                            
-                        }
+                        
                     }
                 }
                 
@@ -190,6 +194,7 @@
                     }
 
                     @include mq($desktopWideBP){
+                        margin-top: 1rem;
                         font-size: 2.2em;
                         text-underline-offset: 12px;
 
