--- a/src/styles/_hero-img.scss
+++ b/src/styles/_hero-img.scss
@@ -1,10 +1,11 @@
 .hero-container {
+    
 
     .slick-slider { 
         box-sizing: border-box;
         width: 100%;
         margin: 0 auto;
-        position: absolute;
+        position: relative;
         left: 0;
         right: 0;
 
@@ -19,11 +20,11 @@
             background-image: linear-gradient(
                     180deg,
                     transparent,
-                    #293241 97%,
-                    #293241
+                    var(--hoverBackground) 97%,
+                    var(--hoverBackground)
                 );
             width: 100%;
-            height: 101%;
+            height: 99.7%;
             z-index: 10;
             opacity: 1;
         }
