--- a/src/styles/_nav-main.scss
+++ b/src/styles/_nav-main.scss
@@ -21,12 +21,32 @@ body {
     width: auto;
     margin-top: 10px;
     padding: 0;
+    order: 9999;
+    text-align: center;
+    
+    
+}
+
+.logo-button a{
+    text-align: center;
+    width: 300px;
+    color: transparent;
 }
 
 .navbar-logo {
     margin: 0;
-    padding-left: 50px;
+    width: 300px;
+    
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-image: var(--logoImage);
+    
+    height: 135px;
+    order: 1000;
+    
 }
+
 
 .NavbarItems {
     position: absolute;
@@ -34,13 +54,14 @@ body {
     left: 0px;
     z-index: 10000;
     display: flex;
+    flex-direction: row-reverse;
     justify-content: space-between;
     align-items: center;
     height: 120px;
     width: 100vw;
     transition: .5s ease-in-out;
     &:hover {
-        background-color: #293241a7;
+        background-color: var(--hoverBackground);
         border-radius: 0px 0px 10px 0px;
     }
     // background-color: $backgroundsecondary;
@@ -111,7 +132,7 @@ body {
     }
     .nav-menu.active {
         width: 100vw;
-        height: 100vh;
+        height: 40vh;
         background: #0b0b0b;
         left: 0;
         opacity: .98;
