--- a/src/styles/_themes.scss
+++ b/src/styles/_themes.scss
@@ -2,16 +2,22 @@
     --backgroundprimary: #293241;
     --backgroundsecondary: #3d5a80;
     --primarytxtcolor: #f5f5f5;
+    --sortTitles: #f5f5f5;
     --accentcolor: #E03D15;
     --lightblue: #B5D2E3;
     --navtext: #f5f5f5;
+    --hoverBackground: rgba(41, 50, 65, 0.655);
+    --logoImage: url("../images/logo_light_blue_text.png");
 }
 
 .theme-light {
     --backgroundprimary: #B5D2E3;
-    --backgroundsecondary: #B5D2E3;
+    --backgroundsecondary: rgb(61, 90, 128);
     --primarytxtcolor: #f5f5f5;
     --accentcolor: #E03D15;
+    --sortTitles: #293241;
     --lightblue: #B5D2E3;
-    --navtext: #293241;
+    --navtext: #f5f5f5;
+    --hoverBackground: rgba(61, 90, 128, 0.655);
+    --logoImage: url("../images/logo_dark_blue_text.png");
 }
