fixed floating footer faves

--- a/src/styles/_section.scss
+++ b/src/styles/_section.scss
@@ -1,9 +1,10 @@
 .favourites {
     padding: 10rem 0 5rem 3rem;
-    min-height: 800px;
+    min-height: 90vh;
     color: var(--sortTitles);
 
 }
+
 
 .favourites a {
     color: var(--backgroundsecondary);
