--- a/src/styles/_searchMovies.scss
+++ b/src/styles/_searchMovies.scss
@@ -15,16 +15,15 @@
 
 .container {
     margin:  auto;
-    max-width: 100vw;
+    max-width: 100%;
     min-height: 95vh;
-    padding: 0px 0px;
     z-index: 3;
     filter: revert;
 }
 
 @media (min-width: 765px) {
     .container {
-        padding-top: 168px;
+        padding-top: 100px;
         padding-bottom: 168px;
     }
 }
@@ -39,8 +38,9 @@
 }
 
 .search-box-container {
+   align-items: center;
     padding: 10px 25px 30px 25px;
-    margin: 10px 50px;
+    margin: 10px 10px;
     background-color: #14384aa3;
     border-radius: 5px;
     // border-color: rgba(255, 68, 0, 0.584);
@@ -131,16 +131,17 @@
 
 .card-list {
     margin-top: 3rem; 
+    margin-bottom: 2rem;
     padding-left: 50px;
     padding-right: 50px;
     display: grid;
     grid-template-columns: repeat(1, 1fr);
     grid-gap: 120px 15px;
-    @media (min-width: 400px) {
-        grid-template-columns: repeat(2, 1fr);
+    @media (min-width: 500px) {
+        grid-template-columns: repeat(1, 1fr);
     }
     @media (min-width: 800px) {
-        grid-template-columns: repeat(3, 1fr);
+        grid-template-columns: repeat(2, 1fr);
     }
     @media (min-width: 1080px) {
         grid-template-columns: repeat(4, 1fr);
@@ -165,7 +166,7 @@
     border-radius: 5px;
     // box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.488);
     background-color: #3d5a8000;
-    transition: .2s ease-in-out;
+    transition: .1s ease-in-out;
     &:hover {
         box-shadow: 1px 15px 50px rgba(0, 0, 0, 0.687); 
         transform: perspective(500px) translate3d(0px, -10px, 50px);
@@ -186,20 +187,20 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-top: 395px;
-    padding: 10px 5px;
+    margin-top: 390px;
+    padding: 5px 5px;
     align-items: center;
     color: #f5f5f5;
-    background-color: rgba(8, 17, 19, 0.94);
+    background-color: rgba(8, 17, 19, 0.879);
     border-radius: 5px;
-    width: 225px;
+    width: 200px;
     transition: .2s ease-in-out;
     &:hover {
         display: flex;
         flex-direction: column;
         justify-content: center;
         margin-top: 225px;
-        width: 225px;
+        width: 200px;
         height: 200px; 
         box-shadow: 1px 15px 50px rgba(0, 0, 0, 0.687); 
         transform: perspective(500px) translate3d(0px, -10px, 50px);
